kustomizations/home-assistant/music-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant
  labels:
    tier: disposable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-assistant
      app.kubernetes.io/name: music-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: music-assistant
        app.kubernetes.io/name: music-assistant
    spec:
      automountServiceAccountToken: false
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: music-assistant
        image: ghcr.io/music-assistant/server:beta
        imagePullPolicy: Always
        command: ["sh", "-c"]
        args:
        - |
          export BIND_INTERFACE=$(cat /tmp/config/iface)
          echo "BIND_INTERFACE detectada dinámicamente: $BIND_INTERFACE"
          exec /usr/local/bin/entrypoint.sh --data-dir /data --cache-dir /data/.cache
        ports:
        - name: web
          containerPort: 8095
        - name: stream
          containerPort: 8097
        securityContext:
          privileged: true
          appArmorProfile:
            type: Unconfined
          capabilities:
            add:
            - DAC_READ_SEARCH 
            - SYS_ADMIN
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "2"
            memory: "2Gi"
        livenessProbe:
          httpGet:
            path: /
            port: 8095
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8095
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 15
        volumeMounts:
        - name: dri
          mountPath: /dev/dri
        - name: music-assistant-data
          mountPath: /data
        - name: music
          mountPath: /music
        - name: tmp
          mountPath: /tmp/config
      nodeSelector:
        kubernetes.io/hostname: catimore
      securityContext:
        fsGroup: 1000
        supplementalGroups: [44, 107, 992]
      volumes:
      - name: dri
        hostPath:
          path: /dev/dri
      - name: music-assistant-data
        persistentVolumeClaim:
          claimName: music-assistant-pvc
      - name: music
        hostPath:
          path: /mnt/music
      - name: tmp
        emptyDir:
          medium: Memory
          sizeLimit: 2Gi
