kustomizations/home-assistant/music-assistant/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  selector:
    app: music-assistant
  ports:
  - name: web
    protocol: TCP
    port: 8095
    targetPort: 8095
  - name: stream
    protocol: TCP
    port: 8097
    targetPort: 8097
