kustomizations/home-assistant/music-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: musicassistant.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: music-assistant
              port:
                number: 8095
  - host: fiesta.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: music-assistant
              port:
                number: 8095
